hphp/hack/test/typecheck/lsb_self_disallowed.php
<?hh

class C {
  <<__LSB>> private static int $id = 0;

  public static function foo(): int {
    return self::$id;
  }
}
